# midibox

./: .gitignore  CMakeLists.txt  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
builds/vst3/mac/MidiBox.vst3/Contents/: Info.plist
builds/vst3/mac/MidiBox.vst3/Contents/_CodeSignature/: CodeResources
builds/vst3/windows/: MidiBox-vst3.rar
builds/vst3/windows/MidiBox.vst3/Contents/Resources/: moduleinfo.json
builds/vst3/windows/MidiBox.vst3/Contents/x86_64-win/: MidiBox.vst3
